--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/roboto": "^4.5.3",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "@mui/styles": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
